deploy/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scm-prod
  labels:
    istio-injection: enabled
