deploy/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: scm-prod
spec:
  mtls:
    mode: STRICT
